# clibcdc-windows

./: .gitignore  CMakeLists.txt  ReadMe.txt  build.bat  libcdc.vcxproj  libcdc.vcxproj.filters
cdc/: CMakeLists.txt
cdc_javastub/: CMakeLists.txt
cdcshared/: CMakeLists.txt
example/: CMakeLists.txt  WriteRead.vcxproj  WriteRead.vcxproj.filters
src/cdc_javastub/: CMakeLists.txt
